# openapi.yaml
@@ -41,11 +41,20 @@ paths:
               example: 
                 "message": "Connect Database failed"
               
-  "/getalltables":
+  "/{sql}/getalltables":
     get:
       tags:
         - Table Information
       summary: 取得所有資料表
+      parameters:
+        - description: 資料庫引擎
+          name: sql
+          in: path
+          required: true
+          schema:
+            type: string
+            example: 
+              "mysql or mssql"
       responses:
         "200":
           description: Successfully
@@ -63,12 +72,20 @@ paths:
               example: 
                 "message": "資料庫發生錯誤"
   
-  "/tableinformation/{tablename}":
+  "/{sql}/tableinformation/{tablename}":
     get:
       tags:
         - Table Information
       summary: 取得資料表資訊
       parameters:
+        - description: 資料庫引擎
+          name: sql
+          in: path
+          required: true
+          schema:
+            type: string
+            example: 
+              "mysql or mssql"
         - description: 資料表名稱
           name: tablename
           in: path
@@ -84,18 +101,29 @@ paths:
               schema:
                 $ref: "#/components/schemas/models.object"
               example:
-                Field:
-                  "欄位名稱"
-                Type:
-                  "欄位類型"                
-                Null:
-                  "是否允許Null"
-                Key:
-                  "key類型"
-                Default:
-                  "預設值"
-                Extra: 
-                  "額外資訊"
+                mysql:
+                  Field:
+                    "欄位名稱"
+                  Type:
+                    "欄位類型"                
+                  Null:
+                    "是否允許Null"
+                  Key:
+                    "key類型"
+                  Default:
+                    "預設值"
+                  Extra: 
+                    "額外資訊"
+                mssql:
+                  Field:
+                    "欄位名稱"
+                  Type:
+                    "欄位類型"                
+                  Null:
+                    "是否允許Null"
+                  Default:
+                    "預設值"
+
         "500":
           description: Internal Server Error
           content:
@@ -105,12 +133,20 @@ paths:
               example:
                 message: "資料庫發生錯誤"
                 
-  "/addvalue/{tablename}":
+  "/{sql}/addvalue/{tablename}":
     post:
       tags:
         - Table CRUD
       summary: 加入數值至資料表
       parameters:
+        - description: 資料庫引擎
+          name: sql
+          in: path
+          required: true
+          schema:
+            type: string
+            example: 
+              "mysql or mssql"
         - description: 資料表名稱
           name: tablename
           in: path
@@ -146,12 +182,20 @@ paths:
               example:
                 message: "資料庫發生錯誤"
                 
-  "/getall/{tablename}":
+  "/{sql}/getall/{tablename}":
     get:
       tags:
         - Table CRUD
       summary: 取得所有資料
       parameters:
+        - description: 資料庫引擎
+          name: sql
+          in: path
+          required: true
+          schema:
+            type: string
+            example: 
+              "mysql or mssql"
         - description: 資料表名稱
           name: tablename
           in: path
@@ -186,12 +230,20 @@ paths:
                 $ref: "#/components/schemas/models.Error"
               example:
                 message: "資料庫發生錯誤"
-  "/getsome/{tablename}":
+  "/{sql}/getsome/{tablename}":
     get:
       tags:
         - Table CRUD
       summary: 取得部分資料
       parameters:
+        - description: 資料庫引擎
+          name: sql
+          in: path
+          required: true
+          schema:
+            type: string
+            example: 
+              "mysql or mssql"
         - description: 資料表名稱
           name: tablename
           in: path
@@ -237,12 +289,20 @@ paths:
               example:
                 message: "資料庫發生錯誤"
   
-  "/update/{tablename}":
+  "/{sql}/update/{tablename}":
     put:
       tags:
         - Table CRUD
       summary: 更新資料表數值
       parameters:
+        - description: 資料庫引擎
+          name: sql
+          in: path
+          required: true
+          schema:
+            type: string
+            example: 
+              "mysql or mssql"
         - description: 資料表名稱
           name: tablename
           in: path
@@ -288,12 +348,20 @@ paths:
               example:
                 message: "資料庫發生錯誤"
                 
-  "/delete/{tablename}":
+  "/{sql}/delete/{tablename}":
     delete:
       tags:
         - Table CRUD
       summary: 刪除資料表數值
       parameters:
+        - description: 資料庫引擎
+          name: sql
+          in: path
+          required: true
+          schema:
+            type: string
+            example: 
+              "mysql or mssql"
         - description: 資料表名稱
           name: tablename
           in: path
@@ -329,12 +397,20 @@ paths:
               example:
                 message: "資料庫發生錯誤"
   
-  "/v1/jointable/{table1}/{table2}":
+  "/jointable/{sql1}/{table1}/{sql2}/{table2}":
     get:
       tags:
         - Join Table
       summary: 資料表合併
       parameters:
+        - description: 資料庫引擎
+          name: sql1
+          in: path
+          required: true
+          schema:
+            type: string
+            example: 
+              "mysql or mssql"
         - description: 資料表名稱
           name: table1
           in: path
@@ -342,6 +418,14 @@ paths:
           schema:
             type: string
           example: peoples
+        - description: 資料庫引擎
+          name: sql2
+          in: path
+          required: true
+          schema:
+            type: string
+            example: 
+              "mysql or mssql"
         - description: 資料表名稱
           name: table2
           in: path
@@ -393,7 +477,7 @@ paths:
               example:
                 message: "資料庫發生錯誤"
   
-  "/v1/jointable/{uuid}":
+  "/jointable/{uuid}":
     get:
       tags:
         - Join Table
